# portainer-deploy

./: CHANGLOG.md  README.md  portainer-deploy.py  pyproject.toml
.github/workflows/: python-package.yml
portainer_deploy/: __init__.py  main.py
